fix style collapse

--- a/src/main/webapp/resources/pageCss/headerHr.css
+++ b/src/main/webapp/resources/pageCss/headerHr.css
@@ -251,7 +251,7 @@ table.dataTable.no-footer {
 	margin-top: -12px;
 	margin-right: -15px;
 	margin-left: -25px;
-	background-color: #707070;
+	/* background-color: #707070; */
 }
 
 .navbar-collapse.in {
